# SmartThermostatController

./: .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: ci-cd.yml
src/smart_thermostat_controller/: __init__.py  hardware.py  routing.py  schedule.py  thermostat.py
tests/: conftest.py  schedule_test.py  server_test.py  test_routing.py  thermostat_test.py
