[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "smart_thermostat_controller"
version = "0.1.0"
description = "The flask server that controllers the smart thermostat."
authors = [
    { name = "Hunter Bowie" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "flask",
    "pytest",
    "gunicorn",
    "gpiozero",
]

